--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-  "name": "blitz-ebook",
-  "description": "A CSS Framework for ebooks",
-  "version": "1.5.2",
-  "homepage": "https://github.com/FriendsOfEpub/Blitz",
-  "license": "MIT",
-  "keywords": [
-    "ebook",
-    "epub",
-    "epub2",
-    "epub3",
-    "css",
-    "kindle",
-    "framework",
-    "ebook-framework"
-  ],
-  "author": {
-    "name": "Friends of EPUB",
-    "url": "https://github.com/FriendsOfEpub"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/FriendsOfEpub/Blitz.git"
-  },
-  "bugs": {
-    "url": "https://github.com/FriendsOfEpub/Blitz/issues"
-  },
-  "main": "Blitz_framework/LESS/blitz.less",
-  "engines": {
-    "node": ">= 10.0.0"
-  },
-  "devDependencies": {
-    "clean-css-cli": "^4.2.1",
-    "cpx": "^1.5.0",
-    "epub-zip": "github:JayPanoz/epub-zip",
-    "less": "^3.9.0"
-  },
-  "scripts": {
-    "build": "npm run build:default && npm run build:lite && npm run build:reset && npm run make",
-    "build:default": "lessc Blitz_framework/LESS/blitz.less Blitz_framework/CSS/blitz.css && cleancss --format beautify -o Blitz_framework/CSS/AltStylesheets/blitz.uncommented.css Blitz_framework/CSS/blitz.css && cpx Blitz_framework/CSS/blitz.css Blitz_template/Blitz_epub3/OEBPS/Styles",
-    "build:lite": "lessc Blitz_framework/LESS/blitz-lite.less Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.css && cleancss --format beautify -o Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.css Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.css && cleancss -o Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.min.css Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.css",
-    "build:reset": "lessc Blitz_framework/LESS/blitz-reset.less Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.css && cleancss --format beautify -o Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.css Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.css && cleancss -o Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.min.css Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.css",
-    "make": "node Blitz_template/make.js"
-  }
+   "name": "blitz-ebook",
+   "description": "A CSS Framework for ebooks",
+   "version": "2.0.0",
+   "homepage": "https://github.com/FriendsOfEpub/Blitz",
+   "license": "MIT",
+   "keywords": [
+      "ebook",
+      "epub",
+      "epub2",
+      "epub3",
+      "css",
+      "kindle",
+      "framework",
+      "ebook-framework"
+   ],
+   "author": {
+      "name": "Friends of EPUB",
+      "url": "https://github.com/FriendsOfEpub"
+   },
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/FriendsOfEpub/Blitz.git"
+   },
+   "bugs": {
+      "url": "https://github.com/FriendsOfEpub/Blitz/issues"
+   },
+   "main": "Blitz_framework/LESS/blitz.less",
+   "engines": {
+      "node": ">= 10.0.0"
+   },
+   "devDependencies": {
+      "clean-css-cli": "^4.2.1",
+      "cpx": "^1.5.0",
+      "epub-zip": "github:JayPanoz/epub-zip",
+      "inquirer": "^13.2.1",
+      "key-value-file": "^1.0.10",
+      "less": "^3.9.0"
+   },
+   "scripts": {
+      "build": "npm run build:default && npm run build:lite && npm run build:reset",
+      "build:default": "lessc Blitz_framework/LESS/blitz.less Blitz_framework/CSS/blitz.css && cleancss --format beautify -o Blitz_framework/CSS/AltStylesheets/blitz.uncommented.css Blitz_framework/CSS/blitz.css && cpx Blitz_framework/CSS/blitz.css Blitz_template/Blitz_epub3/OEBPS/assets && cpx Blitz_framework/CSS/blitz.css Blitz_template/current_book/OEBPS/assets",
+      "build:lite": "lessc Blitz_framework/LESS/blitz-lite.less Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.css && cleancss --format beautify -o Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.css Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.css && cleancss -o Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.min.css Blitz_framework/CSS/AltStylesheets/blitz-lite/blitz-lite.css",
+      "build:reset": "lessc Blitz_framework/LESS/blitz-reset.less Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.css && cleancss --format beautify -o Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.css Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.css && cleancss -o Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.min.css Blitz_framework/CSS/AltStylesheets/blitz-reset/blitz-reset.css",
+      "make": "node scripts/make.mjs",
+      "new": "node scripts/new.mjs"
+   }
 }
